src/test/ui/parser/issues/issue-7970b.rs
fn main() {}

macro_rules! test {}
//~^ ERROR unexpected end of macro invocation
